--- a/Website.html
+++ b/Website.html
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="refresh" content="7; url='https://aqeelabdulla.me'" />
-  </head>
-  <body>
-    <p>You will be redirected to Aqeel's Website soon!</p>
-  </body>
-</html>
+<meta http-equiv="refresh" content="0; url=https://sunaqeel2003.wixsite.com/aqeelabdulla" />
