--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://sunaqeel2003.wixsite.com/aqeelabdulla" />
+<meta http-equiv="refresh" content="0; url=https://aqeelabdulla.framer.website/" />
